LWC_TAT/force-app/main/default/objects/Lead/fields/SLA_Escalation_Tier__c.field-meta.xml
<CustomField>
    <fullName>SLA_Escalation_Tier__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the current tier of the SLA Breach Escalation Matrix (0, 1, 2, or 3).</description>
    <label>SLA Escalation Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>