LWC_TAT/force-app/main/default/objects/Lead/fields/SLA_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the SLA Breach notification has been sent for this Lead.</description>
    <label>SLA Notification Sent</label>
    <type>Checkbox</type>
</CustomField>