LWC_TAT/force-app/main/default/objects/Lead/fields/SLA_Tier_3_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Tier_3_Deadline__c</fullName>
    <description>The deadline for the Tier 3 Escalation, calculated via Business Hours.</description>
    <label>SLA Tier 3 Deadline</label>
    <type>DateTime</type>
</CustomField>